Some rule movements added

--- a/src/index.html
+++ b/src/index.html
@@ -76,8 +76,7 @@
         <div class="arr h5">h5</div>
         <div class="arr h6">h6<div class="piece white" id="w11" draggable="true"></div></div>
         <div class="arr h7">h7</div>
-        <div class="arr h8">h8<div class="piece white" id="w12" draggable="true"></div>
-        </div>
+        <div class="arr h8">h8<div class="piece white" id="w12" draggable="true"></div></div>
     </div>
 </body>
 
